# SpongeSplits2

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.bat  setup.py
.github/workflows/: lint.yml  unit_test.yml
autosplit/: app.py  image_capture.py  image_crop.py
autosplit/conf/: __init__.py  constants.py  network.toml
autosplit/conf/tests/: test_validate_configs.py
autosplit/core/: frame_collector.py  frame_processor.py  result_handler.py
autosplit/gui/: application.py
autosplit/learner/: sample.py
autosplit/learner/models/: __init__.py  basic_cnn_image_model.py  generic_image_model.py  generic_model.py  pineapple_models.py
autosplit/network/: communication_process.py  protobuf_handler.py  service.py  socket.py
autosplit/network/message/: Makefile  frame_pb2.py  frame_pb2.pyi  pineapple_result_pb2.py  pineapple_result_pb2.pyi
autosplit/network/message/protobuf/: frame.proto  pineapple_result.proto
autosplit/network/message_service/: frame_message_service.py  generic_message_service.py  pineapple_result_message_service.py
autosplit/network/message_service/tests/: test_frame_message_service.py  test_generic_message_service.py  test_pineapple_result_message_service.py
autosplit/network/protobuf/: Makefile  frame.proto  frame_result.proto  message.py  pineapple_frame.proto  pineapple_frame_pb2.py  pineapple_result.proto  pineapple_result_pb2.py
autosplit/os/: base_window.py
autosplit/os/win/: window.py
autosplit/settings/: __init__.py  system_config.py  user_config.py
autosplit/settings/tests/: test_config.py  test_system_config.py
autosplit/system/: base_window.py  system_window.py
autosplit/system/linux/: window.py
autosplit/system/win/: window.py
autosplit/win/: image_capture.py
requirements/: common.txt  dev.txt  full.txt  prod.txt
res/: SpongeSplits.psd
