[tool.poetry]
name = "spongesplits"
version = "0.1.0"
description = "SpongeSplits is a video autosplitting tool for SpongeBob Squarepants: Battle for Bikini Bottom."
authors = ["Velkog"]

[tool.poetry.dependencies]
python = "^3.6.8"
google-api-python-client = "^2.28.0"
PyQt5 = "^5.15.6"
pyzmq = "^22.3.0"
types-protobuf = "^3.18.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
